--- a/package/package.json
+++ b/package/package.json
@@ -16,7 +16,8 @@
 		"lint": "./node_modules/.bin/eslint ./src --ext .js,.jsx,.ts,.tsx",
 		"build": "rollup -c",
 		"copy_publish_files": "cp ../README.md .",
-		"prepublish": "yarn run build && yarn run copy_publish_files"
+		"prepublish": "yarn run build && yarn run copy_publish_files",
+		"start": "node ./src/index.ts"
 	},
 	"peerDependencies": {
 		"@material-ui/core": "^4.9.4",
@@ -47,7 +48,7 @@
 		"@types/classnames": "^2.2.9",
 		"@types/jest": "^25.1.2",
 		"@types/lodash.isequal": "^4.5.5",
-		"@types/react": "^16.9.19",
+		"@types/react": "^16.14.4",
 		"@typescript-eslint/eslint-plugin": "^2.19.0",
 		"@typescript-eslint/parser": "^2.19.0",
 		"babel-eslint": "^10.0.1",
@@ -58,9 +59,9 @@
 		"eslint-plugin-jsx-a11y": "^6.2.3",
 		"eslint-plugin-react": "^7.18.3",
 		"eslint-plugin-react-hooks": "^1.7.0",
-		"react": "16.8.6",
-		"react-dom": "16.8.6",
-		"react-scripts": "^3.0.1",
+		"react": "^16.14.0",
+		"react-dom": "^16.14.0",
+		"react-scripts": "^3.4.4",
 		"rollup": "^1.1.2",
 		"rollup-plugin-babel": "^4.3.2",
 		"rollup-plugin-commonjs": "^9.2.0",
@@ -73,8 +74,12 @@
 	"dependencies": {
 		"@material-ui/core": "^4.9.4",
 		"@material-ui/icons": "^4.9.1",
+		"@types/react-dom": "^17.0.1",
 		"classnames": "^2.2.6",
-		"date-fns": "^1.30.1"
+		"date-fns": "^1.30.1",
+		"esm": "^3.2.25",
+		"react": "^16.7.0",
+		"react-dom": "^16.7.0"
 	},
 	"keywords": [
 		"react",
