--- a/package/package.json
+++ b/package/package.json
@@ -16,13 +16,12 @@
 		"lint": "./node_modules/.bin/eslint ./src --ext .js,.jsx,.ts,.tsx",
 		"build": "rollup -c",
 		"copy_publish_files": "cp ../README.md .",
-		"prepublish": "yarn run build && yarn run copy_publish_files",
-		"start": "node ./src/index.ts"
+		"prepublish": "yarn run build && yarn run copy_publish_files"
 	},
 	"peerDependencies": {
 		"@material-ui/core": "^4.9.4",
-		"react": "^16.8.6",
-		"react-dom": "^16.8.6"
+		"react": "^16.14.0",
+		"react-dom": "^16.14.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.0.0",
@@ -78,8 +77,8 @@
 		"classnames": "^2.2.6",
 		"date-fns": "^1.30.1",
 		"esm": "^3.2.25",
-		"react": "^16.7.0",
-		"react-dom": "^16.7.0"
+		"react": "^16.14.0",
+		"react-dom": "^16.14.0"
 	},
 	"keywords": [
 		"react",
